--- a/football.html
+++ b/football.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football</title>
-    <link rel="stylesheet" href="style.css" ; @import
-        url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');>
+    <link rel="stylesheet" href="style.css" ;>
     <script src="https://kit.fontawesome.com/6c1f111da1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -38,7 +37,7 @@
                     a
                     goal.
                     Unqualified,</p>
-                </span>
+
             </div>
             <div class="players">
                 <img src="images/players/player-2.png" alt="" width="300px" ; height="256px" ;>
@@ -123,13 +122,33 @@
      3rd Football section 
 -------------------------->
     <section>
-        <div>
-            <div class="3rd-sction-title">
-                <h1> All Highlights <br>
-                    Copa America 202</h1>
+        <div class="head-of-3rd-section">
+            <div class="third-sction">
+                <h1 id="title-of-3rd"> All Highlights <br>
+                    Copa America 2021</h1>
+                <p>
+                    Football is a family of team sports that involve, to varying degrees, <br>
+                    kicking a ball to score a goal. Unqualified, the word football <br>
+                    normally means the form of football that is the most <br>
+                    popular where the word is used
+                </p>
+                <button class="button"><a href=""></a> Watch Live <i class="fas fa-arrow-right"></i></button>
             </div>
+            <img src="images/match.png" alt="" Width="575px" ; Height="400px" ;>
         </div>
-
+    </section>
+    <!------------------ 
+4th logo section 
+------------------->
+    <section id="logo">
+        <img src="images/Logo.png" alt="" ; width="30%" ; height="10%">
+    </section>
+    <!---------------------- 
+    Social Media Icon 
+----------------------->
+    <section class="icon">
+        <i class="fab fa-instagram"></i></i><i class="fas fa-basketball-ball"></i>
+        <i class="fab fa-twitter"></i> <i class="fab fa-youtube"></i>
     </section>
 
 
