footer_&_device_size

--- a/football.html
+++ b/football.html
@@ -150,8 +150,11 @@
         <i class="fab fa-instagram"></i></i><i class="fas fa-basketball-ball"></i>
         <i class="fab fa-twitter"></i> <i class="fab fa-youtube"></i>
     </section>
-
-
+    <section>
+        <footer id="footer">
+            <p>Copyright © 2022 Football</p>
+        </footer>
+    </section>
 </body>
 
 </html>
