--- a/football.html
+++ b/football.html
@@ -21,7 +21,7 @@
                 <button class="button"><a href=""></a> Watch Live <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="top-player">
-                <img src="images/banner.png" alt="" width="556px" ; height="438px" ;>
+                <img src="images/banner.png" alt="" width="550px" ; height="400px" ;>
             </div>
         </div>
     </section>
@@ -31,90 +31,76 @@
     <section>
         <div class="grid">
             <div class="players">
-                <img src="images/players/player-1.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-1.png" alt="" width="300px" height="300px">
                 <h2>Neymar Jr</h2>
-                <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score
-                    a
-                    goal.
-                    Unqualified,</p>
-
+                <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
+                    goal. Unqualified</p>
             </div>
             <div class="players">
-                <img src="images/players/player-2.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-2.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Lionel Messi</h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, </p>
+                    goal. Unqualified</p>
             </div>
             <div class="players">
-                <img src="images/players/player-3.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-3.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Cristiano Ronaldo</h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified,</p>
+                    goal. Unqualified</p>
             </div>
             <div class="players">
-                <img src="images/players/player-4.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-4.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Paulo Dybala</h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, </p>
+                    goal. Unqualified </p>
             </div>
             <div class="players">
-                <img src="images/players/player-5.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-5.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Mesut Ozil </h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, </p>
+                    goal. Unqualified</p>
             </div>
             <div class="players">
-                <img src="images/players/player-6.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-6.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Mauro Icardi </h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, </p>
+                    goal. Unqualified </p>
             </div>
             <div class="players">
-                <img src="images/players/player-7.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-7.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Di Maria</h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, .</p>
+                    goal. Unqualified.</p>
             </div>
             <div class="players">
-                <img src="images/players/player-8.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-8.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Kylian Mbappé</h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified,</p>
+                    goal. Unqualified,</p>
             </div>
             <div class="players">
-                <img src="images/players/player-9.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-9.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Mohamed Salah</h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, </p>
+                    goal. Unqualified, </p>
             </div>
             <div class="players">
-                <img src="images/players/player-10.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-10.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Kane</h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, .</p>
+                    goal. Unqualified, .</p>
             </div>
             <div class="players">
-                <img src="images/players/player-11.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-11.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Kevin De Bruyne</h2>
                 <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, </p>
+                    goal. Unqualified, </p>
             </div>
             <div class="players">
-                <img src="images/players/player-12.png" alt="" width="300px" ; height="256px" ;>
+                <img src="images/players/player-12.png" alt="" width="300px" ; height="300px" ;>
                 <h2>Philippe Coutinho</h2>
-                <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score a
-                    goal.
-                    Unqualified, </p>
+                <p>Football is a family of team sports that involve,<br> to varying degrees, kicking a ball to score
+                    agoal. Unqualified, </p>
             </div>
         </div>
     </section>
@@ -140,7 +126,7 @@
     <!------------------ 
 4th logo section 
 ------------------->
-    <section id="logo">
+    <section class="logo">
         <img src="images/Logo.png" alt="" ; width="30%" ; height="10%">
     </section>
     <!---------------------- 
